test/errors/scope-resolution/redefinition/redefinition-public-use.1.good
redefinition-public-use.chpl:9: error: 'a' has multiple definitions in this scope
redefinition-public-use.chpl:10: note: it was first defined through the 'use' statement here
redefinition-public-use.chpl:2: note: leading to the definition here
redefinition-public-use.chpl:10: note: redefined through the 'use' statement here
redefinition-public-use.chpl:6: note: leading to the definition here
